@@ -1,6 +1,6 @@
 /* for autoheader's sake; why do i have to do this myself?! */
-#define PACKAGE "
-#define VERSION "
+#define PACKAGE ""
+#define VERSION ""
 
 /* Define if netdb.h declares h_errno */
 #undef H_ERRNO_DECLARED
